--- a/src/styles/_userProfile.scss
+++ b/src/styles/_userProfile.scss
@@ -1,6 +1,15 @@
 .user-profile-page {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   margin-top: 100px;
+
+  @media (max-width: 768px) {
+    margin-top: 80px;
+    padding-inline: 8px;
+  }
+
+  @media (max-width: 480px) {
+    padding-inline: 0;
+  }
 }
